Integrated OAuth2 with JWT -vipul