@@ -1,6 +1,11 @@
 package com.cms.CourierKaro.config;
 
 import com.cms.CourierKaro.security.JwtAuthenticationFilter;
+import com.cms.CourierKaro.security.OAuth2SuccessHandler;
+import com.cms.CourierKaro.service.CustomOAuth2UserService;
+
+import lombok.RequiredArgsConstructor;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -15,15 +20,19 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
+
+    private final CustomOAuth2UserService customOAuth2UserService;
     
+    private final OAuth2SuccessHandler oAuthSuccessHandler;
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
-    
+
+   
     @Bean
     AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
@@ -35,10 +44,14 @@ public class SecurityConfig {
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> 
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .anyRequest().permitAll()
-            )
+                session.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
+            .authorizeHttpRequests(requests -> requests
+					.requestMatchers("/login", "/register","/oauth2/**","/login/oauth2/**").permitAll()
+					.anyRequest().authenticated())
+            .oauth2Login(oauth->oauth
+            		.userInfoEndpoint(userInfo->userInfo
+            		        .oidcUserService(customOAuth2UserService) )
+            		.successHandler(oAuthSuccessHandler))//redirects after successful login
             .httpBasic(httpBasic -> httpBasic.disable())
             .formLogin(formLogin -> formLogin.disable())
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -48,10 +61,14 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList(
+        		"http://localhost:5173",
+        		"http://localhost:5174",
+        		"http://localhost:5177"
+        		));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
-//        configuration.setAllowCredentials(true	);
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
